--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
@@ -27,16 +29,20 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> <span class="cart-badge" id="cartBadge">0</span></a>
+                        <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> <span
+                                class="cart-badge" id="cartBadge">0</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Account
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="login.html">Login</a></li>
                             <li><a class="dropdown-item" href="register.html">Register</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
                             <li><a class="dropdown-item" href="profile.html">Profile</a></li>
                         </ul>
                     </li>
@@ -44,7 +50,7 @@
             </div>
         </div>
     </nav>
-    
+
     <!-- Contact Page -->
     <div id="contact" class="page-content">
         <div class="container" style="padding-top: 100px;">
@@ -54,7 +60,7 @@
                         <h2>Contact Us</h2>
                         <p class="lead">We'd love to hear from you</p>
                     </div>
-                    
+
                     <form id="contactForm" class="needs-validation" novalidate>
                         <div class="mb-3">
                             <label for="name" class="form-label">Name</label>
@@ -106,7 +112,8 @@
                                 </div>
                                 <div class="d-flex align-items-center mb-3">
                                     <i class="fas fa-clock me-3 fa-lg"></i>
-                                    <p class="mb-0">Monday - Friday: 9:00 AM - 6:00 PM<br>Saturday: 10:00 AM - 4:00 PM</p>
+                                    <p class="mb-0">Monday - Friday: 9:00 AM - 6:00 PM<br>Saturday: 10:00 AM - 4:00 PM
+                                    </p>
                                 </div>
                             </div>
                             <div class="social-media mt-4">
@@ -131,7 +138,8 @@
         <div class="footer-container">
             <div class="footer-col">
                 <h4>About Us</h4>
-                <p>Men's Style Hub is your go-to destination for premium men's fashion. We offer a curated selection of clothing, accessories, and footwear to elevate your style.</p>
+                <p>Men's Style Hub is your go-to destination for premium men's fashion. We offer a curated selection of
+                    clothing, accessories, and footwear to elevate your style.</p>
             </div>
             <div class="footer-col">
                 <h4>Quick Links</h4>
@@ -156,4 +164,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
