--- a/register.html
+++ b/register.html
@@ -1,124 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men's Style Hub - Register</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register - Hoang Computer</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/register.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="home.html">Men's Style Hub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> <span class="cart-badge" id="cartBadge">0</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="register.html">Register</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Register Page -->
-    <div class="container" style="padding-top: 100px;">
-        <div class="row justify-content-center">
-            <div class="col-md-8 col-lg-6">
-                <div class="card shadow">
-                    <div class="card-body p-5">
-                        <div class="text-center mb-4">
-                            <h2>Register</h2>
-                            <p class="text-muted">Create your account</p>
-                        </div>
-                        <form id="registerForm" class="needs-validation" novalidate>
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <label for="firstName" class="form-label">First Name</label>
-                                    <input type="text" class="form-control" id="firstName" required>
-                                    <div class="invalid-feedback">Please enter your first name.</div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <label for="lastName" class="form-label">Last Name</label>
-                                    <input type="text" class="form-control" id="lastName" required>
-                                    <div class="invalid-feedback">Please enter your last name.</div>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="registerEmail" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="registerEmail" required>
-                                <div class="invalid-feedback">Please enter a valid email address.</div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="registerPassword" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="registerPassword" required minlength="8">
-                                <div class="invalid-feedback">Password must be at least 8 characters.</div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="confirmPassword" class="form-label">Confirm Password</label>
-                                <input type="password" class="form-control" id="confirmPassword" required>
-                                <div class="invalid-feedback">Passwords must match.</div>
-                            </div>
-                            <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="termsCheck" required>
-                                <label class="form-check-label" for="termsCheck">I agree to the <a href="#">Terms and Conditions</a></label>
-                                <div class="invalid-feedback">You must agree to the terms.</div>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Register</button>
-                            <div class="text-center mt-3">
-                                <p>Already have an account? <a href="login.html">Login here</a></p>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="#home">
+        <img src="images/logo.png" alt="Logo" class="navbar-logo me-2">
+        Hoang Computer
+      </a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-col">
-                <h4>About Us</h4>
-                <p>Men's Style Hub is your go-to destination for premium men's fashion. We offer a curated selection of clothing, accessories, and footwear to elevate your style.</p>
-            </div>
-            <div class="footer-col">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="cart.html">Cart</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Contact Us</h4>
-                <p>123 Fashion Street, Style District, New York, NY 10001</p>
-                <p>+1 (555) 123-4567</p>
-                <p>info@mensstylehub.com</p>
-            </div>
+  </nav>
+
+  <!-- Register Form -->
+  <div class="container register-container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="register-image">
+          <img src="./images/logo.png" alt="Register Image" class="img-fluid">
         </div>
-        <div class="footer-bottom">© 2025 Men's Style Hub. All rights reserved.</div>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+        <div class="brand-description text-center mt-4">
+          <h3>Hoang Computer</h3>
+          <p>Create your account and start exploring our wide range of high-quality technology products.</p>
+          <p>HoangTechCom - Your Trusted Tech Partner</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div id="registerForm" class="card register-card shadow mb-4">
+          <div class="card-body p-5">
+            <div class="register-header">
+              <h2>Create Account</h2>
+              <p class="text-muted">Join our community today</p>
+            </div>
+            <form id="registerFormElement" class="register-form needs-validation" novalidate>
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <label for="firstName" class="form-label">First Name</label>
+                  <input type="text" class="form-control" id="firstName" required>
+                  <div class="invalid-feedback">
+                    Please enter your first name.
+                  </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                  <label for="lastName" class="form-label">Last Name</label>
+                  <input type="text" class="form-control" id="lastName" required>
+                  <div class="invalid-feedback">
+                    Please enter your last name.
+                  </div>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="registerEmail" class="form-label">Email address</label>
+                <div class="input-group">
+                  <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                  <input type="email" class="form-control" id="registerEmail" required>
+                </div>
+                <div class="invalid-feedback">
+                  Please enter a valid email address.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="registerPassword" class="form-label">Password</label>
+                <div class="input-group">
+                  <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                  <input type="password" class="form-control" id="registerPassword" required>
+                  <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                </div>
+                <div class="invalid-feedback">
+                  Password must be at least 8 characters long and contain uppercase, lowercase, numbers, and special
+                  characters.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <div class="input-group">
+                  <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                  <input type="password" class="form-control" id="confirmPassword" required>
+                </div>
+                <div class="invalid-feedback">
+                  Passwords do not match.
+                </div>
+              </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="agreeTerms" required>
+                <label class="form-check-label" for="agreeTerms">
+                  I agree to the <a href="#" class="text-primary">Terms and Conditions</a>
+                </label>
+                <div class="invalid-feedback">
+                  You must agree to the terms and conditions.
+                </div>
+              </div>
+              <button type="submit" class="btn register-btn w-100 mb-3">
+                <i class="fas fa-user-plus me-2"></i>Create Account
+              </button>
+              <div class="text-center mt-4">
+                <p class="mb-0">Already have an account? <a href="login.html" class="text-primary">Login here</a></p>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white py-5">
+    <div class="container">
+      <div class="row justify-content-center text-center">
+        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+          <h5 class="text-uppercase mb-4">About Us</h5>
+          <p class="text-white text-center">Hoang Computer is a store specializing in high-quality technology
+            products. We are committed to providing our customers with the best shopping experience.</p>
+        </div>
+        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+          <h5 class="text-uppercase mb-4">Quick Links</h5>
+          <ul class="list-unstyled text-center">
+            <li class="mb-2"><a href="#home" class="text-white text-decoration-none">Home</a></li>
+            <li class="mb-2"><a href="#products" class="text-white text-decoration-none">Products</a></li>
+            <li class="mb-2"><a href="#contact" class="text-white text-decoration-none">Contact</a></li>
+            <li class="mb-2"><a href="#cart" class="text-white text-decoration-none">Cart</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+          <h5 class="text-uppercase mb-4">Contact Us</h5>
+          <p class="text-white mb-2"><i class="fas fa-map-marker-alt me-2"></i>06 Tran Thanh Trung, Thanh Khe,
+            DaNang</p>
+          <p class="text-white mb-2"><i class="fas fa-phone me-2"></i>+84 374145631</p>
+          <p class="text-white mb-2"><i class="fas fa-envelope me-2"></i>pvhoang1701@gmail.com</p>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-12 text-center">
+          <p class="text-white mb-0">&copy; 2024 Hoang Computer. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="./js/register.js"></script>
 </body>
+
 </html>
