--- a/checkout.html
+++ b/checkout.html
@@ -1,154 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men's Style Hub - Checkout</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thanh toán - Hoang Computer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/cart.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/checkout.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/css/select2.min.css" rel="stylesheet" />
 </head>
-<body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Men's Style Hub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> <span class="cart-badge" id="cartBadge">0</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="register.html">Register</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Checkout Page -->
-    <div class="container" style="padding-top: 100px;">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="card shadow mb-4">
-                    <div class="card-body">
-                        <h2 class="mb-4">Checkout</h2>
-                        <form id="checkoutForm" class="needs-validation" novalidate>
-                            <h5 class="mb-3">Shipping Information</h5>
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <label for="shippingName" class="form-label">Full Name</label>
-                                    <input type="text" class="form-control" id="shippingName" required>
-                                    <div class="invalid-feedback">Please enter your name.</div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <label for="shippingPhone" class="form-label">Phone Number</label>
-                                    <input type="tel" class="form-control" id="shippingPhone" required>
-                                    <div class="invalid-feedback">Please enter your phone number.</div>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="shippingAddress" class="form-label">Address</label>
-                                <input type="text" class="form-control" id="shippingAddress" required>
-                                <div class="invalid-feedback">Please enter your address.</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <label for="shippingCity" class="form-label">City</label>
-                                    <input type="text" class="form-control" id="shippingCity" required>
-                                    <div class="invalid-feedback">Please enter your city.</div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <label for="shippingZip" class="form-label">ZIP/Postal Code</label>
-                                    <input type="text" class="form-control" id="shippingZip" required>
-                                    <div class="invalid-feedback">Please enter your ZIP/postal code.</div>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="shippingCountry" class="form-label">Country</label>
-                                <input type="text" class="form-control" id="shippingCountry" required>
-                                <div class="invalid-feedback">Please enter your country.</div>
-                            </div>
-                            <hr>
-                            <h5 class="mb-3">Payment Information</h5>
-                            <div class="mb-3">
-                                <label for="cardNumber" class="form-label">Card Number</label>
-                                <input type="text" class="form-control" id="cardNumber" required pattern="[0-9]{16}">
-                                <div class="invalid-feedback">Please enter a valid 16-digit card number.</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <label for="cardExpiry" class="form-label">Expiry Date</label>
-                                    <input type="text" class="form-control" id="cardExpiry" placeholder="MM/YY" required pattern="(0[1-9]|1[0-2])\/\d{2}">
-                                    <div class="invalid-feedback">Please enter a valid expiry date (MM/YY).</div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <label for="cardCVC" class="form-label">CVC</label>
-                                    <input type="text" class="form-control" id="cardCVC" required pattern="[0-9]{3,4}">
-                                    <div class="invalid-feedback">Please enter a valid CVC.</div>
-                                </div>
-                            </div>
-                            <div class="form-check mb-3">
-                                <input class="form-check-input" type="checkbox" id="saveInfo">
-                                <label class="form-check-label" for="saveInfo">Save this information for next time</label>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Place Order</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card shadow mb-4">
-                    <div class="card-body">
-                        <h5 class="mb-3">Order Summary</h5>
-                        <div id="checkoutSummary">
-                            <!-- Order summary will be loaded here -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+<body class="checkout-page">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="images/logo.png" alt="Logo" class="navbar-logo me-2">
+        Hoang Computer
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="products.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item position-relative">
+            <a class="nav-link active" href="checkout.html">
+              <i class="fas fa-shopping-cart"></i>
+              <span class="cart-badge" id="cartBadge">0</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-col">
-                <h4>About Us</h4>
-                <p>Men's Style Hub is your go-to destination for premium men's fashion. We offer a curated selection of clothing, accessories, and footwear to elevate your style.</p>
-            </div>
-            <div class="footer-col">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="cart.html">Cart</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Contact Us</h4>
-                <p>123 Fashion Street, Style District, New York, NY 10001</p>
-                <p>+1 (555) 123-4567</p>
-                <p>info@mensstylehub.com</p>
-            </div>
+  </nav>
+
+  <!-- Checkout Page -->
+  <div class="checkout-container py-5" style="background: #f5f5fa; min-height: 100vh;">
+    <div class="container px-2 px-md-4" style="max-width: 900px;">
+      <div class="d-flex align-items-center justify-content-center mb-4">
+        <i class="fas fa-shopping-bag fa-2x text-warning me-2"></i>
+        <h2 class="checkout-title fade-in text-center fw-bold mb-0" style="color: #ee4d2d; letter-spacing: 1px;">Order
+          Checkout</h2>
+      </div>
+      <div class="row justify-content-center gy-4">
+        <!-- Empty Cart Message -->
+        <div id="emptyCartMessage" class="empty-cart-message card shadow border-0 p-4 mb-4 text-center"
+          style="display: none; background: #fff;">
+          <i class="fas fa-shopping-cart fa-3x text-warning mb-3"></i>
+          <h3 class="fw-bold">Your cart is empty</h3>
+          <p class="text-muted">Please add products to your cart to continue shopping</p>
+          <a href="products.html" class="btn btn-continue-shopping btn-outline-warning rounded-pill px-4 fw-bold">
+            <i class="fas fa-shopping-bag me-2"></i>Continue Shopping
+          </a>
         </div>
-        <div class="footer-bottom">© 2025 Men's Style Hub. All rights reserved.</div>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+        <!-- Checkout Content -->
+        <div id="checkoutContent" class="row w-100 gx-4 gy-4 flex-column align-items-center">
+          <!-- Cart Items -->
+          <div class="col-12 mb-4 slide-in-left">
+            <div class="cart-table fade show card shadow-lg border-0 mb-4 rounded-4 overflow-hidden">
+              <div class="card-header bg-white border-bottom py-3 px-4 d-flex align-items-center"
+                style="background: #fff;">
+                <i class="fas fa-shopping-cart text-warning me-2"></i>
+                <span class="fw-bold text-dark" style="font-size: 1.2rem;">Cart Items</span>
+              </div>
+              <div class="card-body p-0">
+                <div id="checkoutItems"></div>
+              </div>
+            </div>
+          </div>
+          <!-- Order Summary -->
+          <div class="col-12 slide-in-up">
+            <div class="order-summary-card fade show card shadow-lg border-0 mb-4 rounded-4 overflow-hidden">
+              <div class="card-header bg-white border-bottom py-3 px-4 d-flex align-items-center"
+                style="background: #fff;">
+                <i class="fas fa-calculator text-success me-2"></i>
+                <span class="fw-bold text-dark" style="font-size: 1.2rem;">Order Summary</span>
+              </div>
+              <div class="card-body pb-2">
+                <div class="summary-row d-flex justify-content-between mb-2">
+                  <span>Subtotal</span>
+                  <span id="orderSubtotal" class="fw-bold text-dark">0 ₫</span>
+                </div>
+                <div class="summary-row d-flex justify-content-between mb-2">
+                  <span>Shipping Fee</span>
+                  <span id="orderShipping" class="fw-bold text-dark">30,000 ₫</span>
+                </div>
+                <div class="summary-row d-flex justify-content-between mb-2">
+                  <span>Tax (10%)</span>
+                  <span id="orderTax" class="fw-bold text-dark">0 ₫</span>
+                </div>
+                <div class="summary-row total-row d-flex justify-content-between border-top pt-3 mt-3">
+                  <span class="fw-bold" style="font-size: 1.1rem; color: #ee4d2d;">Total Payment</span>
+                  <span id="orderTotal" class="fw-bold" style="font-size: 1.2rem; color: #ee4d2d;">0 ₫</span>
+                </div>
+                <div class="d-flex justify-content-end mt-4">
+                  <button id="proceedToCheckoutBtn" class="btn btn-lg rounded-pill fw-bold"
+                    style="background: #ee4d2d; color: #fff; letter-spacing: 1px; min-width: 200px;">Buy Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white py-5">
+    <div class="container">
+      <div class="row justify-content-center text-center">
+        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+          <h5 class="text-uppercase mb-4">About Us</h5>
+          <p class="text-muted text-center">Hoang Computer is a store specializing in high-quality technology products.
+            We are committed to providing our customers with the best shopping experience.</p>
+        </div>
+        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+          <h5 class="text-uppercase mb-4">Quick Links</h5>
+          <ul class="list-unstyled text-center">
+            <li class="mb-2"><a href="index.html" class="text-muted text-decoration-none">Home</a></li>
+            <li class="mb-2"><a href="products.html" class="text-muted text-decoration-none">Products</a></li>
+            <li class="mb-2"><a href="contact.html" class="text-muted text-decoration-none">Contact</a></li>
+            <li class="mb-2"><a href="checkout.html" class="text-muted text-decoration-none">Cart</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+          <h5 class="text-uppercase mb-4">Contact Us</h5>
+          <p class="text-muted mb-2"><i class="fas fa-map-marker-alt me-2"></i>06 Tran Thanh Trung, Thanh Khe, DaNang
+          </p>
+          <p class="text-muted mb-2"><i class="fas fa-phone me-2"></i>+84 374145631</p>
+          <p class="text-muted mb-2"><i class="fas fa-envelope me-2"></i>pvhoang1701@gmail.com</p>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-12 text-center">
+          <p class="text-muted mb-0">&copy; 2024 Hoang Computer. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-beta.1/js/select2.min.js"></script>
+  <script src="./js/vn-province-district.js"></script>
+  <script src="./js/cart.js"></script>
+  <script src="./js/checkout.js"></script>
+  <script>
+    $(document).ready(function () {
+      // Load provinces
+      $('#selectProvince').select2({
+        placeholder: 'Select province/city',
+        data: VN_PROVINCES.map(p => ({ id: p.code, text: p.name }))
+      });
+      // Load districts when province changes
+      $('#selectProvince').on('change', function () {
+        const provinceCode = $(this).val();
+        const province = VN_PROVINCES.find(p => String(p.code) === String(provinceCode));
+        const districts = province ? province.districts : [];
+        $('#selectDistrict').empty().select2({
+          placeholder: 'Select district',
+          data: districts.map(d => ({ id: d.name, text: d.name }))
+        });
+      });
+      // Init empty district
+      $('#selectDistrict').select2({ placeholder: 'Select district' });
+    });
+
+    document.addEventListener('DOMContentLoaded', function () {
+      var btn = document.getElementById('proceedToCheckoutBtn');
+      if (btn) {
+        btn.addEventListener('click', function () {
+          window.location.href = 'checkout-info.html';
+        });
+      }
+    });
+  </script>
 </body>
+
 </html>
