--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/cart.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="#home">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="images/logo.png" alt="Logo" class="navbar-logo me-2">
                 Hoang Computer
             </a>
@@ -27,16 +30,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home" onclick="showPage('home')">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="products.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact" onclick="showPage('contact')">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item position-relative">
-                        <a class="nav-link" href="#cart" onclick="showPage('cart')">
+                        <a class="nav-link" href="checkout.html">
                             <i class="fas fa-shopping-cart"></i>
                             <span class="cart-badge" id="cartBadge">0</span>
                         </a>
@@ -462,6 +465,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./js/cart.js"></script>
     <script>
         // Auto banner carousel
         (function () {
@@ -488,64 +492,46 @@
             setInterval(nextSlide, 4000);
         })();
 
-        // Cart functionality
-        function addToCart(product) {
-            try {
-                let cart = JSON.parse(localStorage.getItem('cart')) || [];
-                const existingItem = cart.find(item => item.id === product.id);
-
-                if (existingItem) {
-                    existingItem.quantity += 1;
-                } else {
-                    cart.push({
-                        id: product.id,
-                        name: product.name,
-                        price: product.price,
-                        image: product.image,
-                        quantity: 1,
-                        color: 'Default'
-                    });
-                }
-
-                localStorage.setItem('cart', JSON.stringify(cart));
-
-                // Update cart badge
-                const cartBadge = document.getElementById('cartBadge');
-                if (cartBadge) {
-                    cartBadge.textContent = cart.reduce((sum, item) => sum + item.quantity, 0);
-                }
-
-                alert('Product added to cart!');
-            } catch (error) {
-                console.error('Error adding to cart:', error);
-                alert('Error adding product to cart. Please try again.');
-            }
-        }
-
         // Initialize cart badge on page load
         document.addEventListener('DOMContentLoaded', function () {
-            const cart = JSON.parse(localStorage.getItem('cart')) || [];
-            const cartBadge = document.getElementById('cartBadge');
-            if (cartBadge) {
-                cartBadge.textContent = cart.reduce((sum, item) => sum + item.quantity, 0);
-            }
-
-            // Add click handlers for Add to Cart buttons
-            document.querySelectorAll('.btn-add-cart').forEach(button => {
-                button.addEventListener('click', function () {
-                    const productCard = this.closest('.product-card');
-                    const product = {
-                        id: Math.random().toString(36).substr(2, 9), // Generate random ID
-                        name: productCard.querySelector('.product-title').textContent,
-                        price: productCard.querySelector('.product-price').textContent,
-                        image: productCard.querySelector('.product-image img').src,
-                        quantity: 1,
-                        color: 'Default'
-                    };
-                    addToCart(product);
-                });
-            });
+            // Cart manager is already initialized in cart.js
+            // No need for additional initialization here
         });
+
+        // Lưu giỏ hàng vào cookie
+        function setCartCookie(cart) {
+            document.cookie = "cart=" + encodeURIComponent(JSON.stringify(cart)) + ";path=/";
+        }
+
+        // Lấy giỏ hàng từ cookie
+        function getCartCookie() {
+            const value = document.cookie.match('(^|;)\\s*cart\\s*=\\s*([^;]+)');
+            return value ? JSON.parse(decodeURIComponent(value.pop())) : [];
+        }
+
+        function addToCart(product) {
+            const cart = getCartCookie();
+            const index = cart.findIndex(item => item.id === product.id);
+            if (index > -1) {
+                cart[index].quantity += 1;
+            } else {
+                cart.push({ ...product, quantity: 1 });
+            }
+            setCartCookie(cart);
+            updateCartBadge();
+        }
+
+        function updateCartBadge() {
+            const cart = getCartCookie();
+            const total = cart.reduce((sum, item) => sum + item.quantity, 0);
+            const badge = document.getElementById('cartBadge');
+            if (badge) badge.textContent = total;
+        }
+
+        function renderCheckoutItems() {
+            const cart = getCartCookie();
+            // ... code render như cũ ...
+        }
     </script>
 </body>
 
