--- a/contact.html
+++ b/contact.html
@@ -5,425 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - Hoang Computer</title>
+  <link rel="stylesheet" href="./css/base.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/cart.css">
-  <style>
-    :root {
-      --primary-color: #6366f1;
-      --secondary-color: #8b5cf6;
-      --accent-color: #06b6d4;
-      --success-color: #10b981;
-      --warning-color: #f59e0b;
-      --danger-color: #ef4444;
-      --dark-color: #1f2937;
-      --light-color: #f8fafc;
-      --gray-100: #f1f5f9;
-      --gray-200: #e2e8f0;
-      --gray-300: #cbd5e1;
-      --gray-600: #475569;
-      --gray-800: #1e293b;
-    }
-
-    body {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-      line-height: 1.6;
-      color: var(--gray-800);
-      padding-top: 80px;
-    }
-
-    /* Enhanced Navbar */
-    .navbar {
-      background: rgba(255, 255, 255, 0.95) !important;
-      backdrop-filter: blur(20px);
-      -webkit-backdrop-filter: blur(20px);
-      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-      padding: 15px 0;
-      transition: all 0.3s ease;
-    }
-
-    .navbar.scrolled {
-      padding: 10px 0;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      font-size: 1.5rem;
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      display: flex;
-      align-items: center;
-    }
-
-    .navbar-logo {
-      height: 40px;
-      margin-right: 10px;
-      transition: all 0.3s ease;
-    }
-
-    .nav-link {
-      font-weight: 500;
-      position: relative;
-      transition: all 0.3s ease;
-      padding: 8px 15px !important;
-      border-radius: 8px;
-    }
-
-    .nav-link:hover {
-      color: var(--primary-color) !important;
-      background: rgba(99, 102, 241, 0.1);
-    }
-
-    .nav-link.active {
-      color: var(--primary-color) !important;
-      font-weight: 600;
-    }
-
-    .nav-link.active::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 20px;
-      height: 3px;
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border-radius: 2px;
-    }
-
-    /* Enhanced Hero Section */
-    .hero-section {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 50%, var(--accent-color) 100%);
-      position: relative;
-      overflow: hidden;
-      padding: 100px 0;
-      color: white;
-    }
-
-    .hero-section::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><defs><radialGradient id="a" cx="50%" cy="50%" r="50%"><stop offset="0%" stop-color="white" stop-opacity="0.1"/><stop offset="100%" stop-color="white" stop-opacity="0"/></radialGradient></defs><circle cx="200" cy="200" r="100" fill="url(%23a)"/><circle cx="800" cy="300" r="150" fill="url(%23a)"/><circle cx="400" cy="700" r="120" fill="url(%23a)"/></svg>');
-      animation: float 20s ease-in-out infinite;
-      opacity: 0.6;
-    }
-
-    .hero-content {
-      position: relative;
-      z-index: 2;
-    }
-
-    /* Quick Contact Buttons */
-    .quick-contact-section {
-      background: var(--gray-100);
-      padding: 40px 0;
-    }
-
-    .quick-contact-btn {
-      border-radius: 50px;
-      padding: 15px 25px;
-      margin: 8px;
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-      position: relative;
-      overflow: hidden;
-      border: none;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      min-width: 180px;
-    }
-
-    .quick-contact-btn i {
-      margin-right: 8px;
-      font-size: 1.1rem;
-    }
-
-    /* Contact Methods */
-    .contact-method {
-      background: white;
-      border-radius: 16px;
-      padding: 25px;
-      margin-bottom: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-      border: 1px solid var(--gray-200);
-      transition: all 0.3s ease;
-      height: 100%;
-    }
-
-    .contact-method:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
-    }
-
-    .contact-icon {
-      width: 50px;
-      height: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 12px;
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      color: white;
-      font-size: 1.2rem;
-      margin-right: 15px;
-      flex-shrink: 0;
-    }
-
-    /* Form Styling */
-    .contact-form-card {
-      background: white;
-      border-radius: 16px;
-      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.08);
-      border: 1px solid var(--gray-200);
-      overflow: hidden;
-      height: 100%;
-    }
-
-    .form-control,
-    .form-select {
-      border: 2px solid var(--gray-200);
-      border-radius: 12px;
-      padding: 12px 18px;
-      font-size: 1rem;
-      transition: all 0.3s ease;
-    }
-
-    .form-control:focus,
-    .form-select:focus {
-      border-color: var(--primary-color);
-      box-shadow: 0 0 0 0.25rem rgba(99, 102, 241, 0.15);
-    }
-
-    .form-label {
-      font-weight: 600;
-      color: var(--gray-600);
-      margin-bottom: 8px;
-    }
-
-    /* Button Styles */
-    .btn-primary {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border: none;
-      border-radius: 50px;
-      padding: 15px 30px;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-      transition: all 0.3s ease;
-    }
-
-    .btn-primary:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(99, 102, 241, 0.3);
-    }
-
-    /* Map Container */
-    .map-container {
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
-      height: 100%;
-      min-height: 300px;
-    }
-
-    .map-container iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-
-    /* Section Titles */
-    .section-title {
-      font-size: 2.2rem;
-      font-weight: 700;
-      margin-bottom: 2.5rem;
-      position: relative;
-      display: inline-block;
-    }
-
-    .section-title::after {
-      content: '';
-      position: absolute;
-      bottom: -15px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 60px;
-      height: 4px;
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border-radius: 2px;
-    }
-
-    /* Responsive Adjustments */
-    @media (max-width: 992px) {
-      .hero-section {
-        padding: 80px 0;
-      }
-
-      .section-title {
-        font-size: 1.8rem;
-      }
-    }
-
-    @media (max-width: 768px) {
-      body {
-        padding-top: 70px;
-      }
-
-      .hero-section {
-        padding: 60px 0;
-      }
-
-      .section-title {
-        font-size: 1.6rem;
-      }
-
-      .quick-contact-btn {
-        min-width: 160px;
-        padding: 12px 20px;
-        font-size: 0.9rem;
-      }
-    }
-
-    /* Animation Classes */
-    .animate-on-scroll {
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 0.6s ease;
-    }
-
-    .animate-on-scroll.animate {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    /* Loading Spinner */
-    .spinner-border {
-      width: 1.5rem;
-      height: 1.5rem;
-      border-width: 0.2em;
-    }
-
-    /* Toast Notification */
-    .toast-container {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 1100;
-    }
-
-    /* Policy Cards */
-    .policy-card {
-      background: white;
-      border-radius: 16px;
-      padding: 25px;
-      margin-bottom: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-      border-left: 4px solid var(--primary-color);
-      transition: all 0.3s ease;
-      height: 100%;
-    }
-
-    .policy-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
-    }
-
-    /* FAQ Styling */
-    .faq-item {
-      border: none;
-      border-radius: 16px;
-      margin-bottom: 15px;
-      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
-      overflow: hidden;
-    }
-
-    .accordion-button {
-      border-radius: 16px !important;
-      font-weight: 600;
-      padding: 18px 25px;
-      background: var(--light-color);
-    }
-
-    .accordion-button:not(.collapsed) {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      color: white;
-    }
-
-    .accordion-body {
-      padding: 20px 25px;
-    }
-
-    /* Footer */
-    footer {
-      background: linear-gradient(135deg, var(--dark-color) 0%, #374151 100%);
-      position: relative;
-      padding: 60px 0 30px;
-    }
-
-    footer::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 1px;
-      background: linear-gradient(90deg, transparent, var(--primary-color), transparent);
-    }
-
-    .footer-links a {
-      color: var(--gray-300);
-      text-decoration: none;
-      transition: all 0.3s ease;
-      display: block;
-      margin-bottom: 10px;
-    }
-
-    .footer-links a:hover {
-      color: white;
-      transform: translateX(5px);
-    }
-
-    .social-icons a {
-      color: white;
-      background: rgba(255, 255, 255, 0.1);
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      margin-right: 10px;
-      transition: all 0.3s ease;
-    }
-
-    .social-icons a:hover {
-      background: var(--primary-color);
-      transform: translateY(-3px);
-    }
-
-    .contact-form-card,
-    .contact-method {
-      height: 100%;
-    }
-  </style>
+  <link rel="stylesheet" href="./css/contact.css">
 </head>
 
 <body>
-  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -442,7 +33,7 @@
             <a class="nav-link" href="products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
           <li class="nav-item position-relative">
             <a class="nav-link" href="checkout.html">
@@ -457,7 +48,6 @@
       </div>
     </div>
   </nav>
-
   <!-- Hero Section -->
   <section class="hero-section">
     <div class="container text-center hero-content">
@@ -789,39 +379,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-dark text-white py-5">
-    <div class="container">
-      <div class="row justify-content-center text-center">
-        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h5 class="text-uppercase mb-4">About Us</h5>
-          <p class="text-muted text-center">Hoang Computer is a store specializing in high-quality technology products.
-            We are committed to providing our customers with the best shopping experience.</p>
-        </div>
-        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h5 class="text-uppercase mb-4">Quick Links</h5>
-          <ul class="list-unstyled text-center">
-            <li class="mb-2"><a href="index.html" class="text-muted text-decoration-none">Home</a></li>
-            <li class="mb-2"><a href="products.html" class="text-muted text-decoration-none">Products</a></li>
-            <li class="mb-2"><a href="#contact" class="text-muted text-decoration-none">Contact</a></li>
-            <li class="mb-2"><a href="checkout.html" class="text-muted text-decoration-none">Cart</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h5 class="text-uppercase mb-4">Contact Us</h5>
-          <p class="text-muted mb-2"><i class="fas fa-map-marker-alt me-2"></i>06 Tran Thanh Trung, Thanh Khe, Da Nang
-          </p>
-          <p class="text-muted mb-2"><i class="fas fa-phone me-2"></i>+84 374145631</p>
-          <p class="text-muted mb-2"><i class="fas fa-envelope me-2"></i>pvhoang1701@gmail.com</p>
-        </div>
-      </div>
-      <div class="row mt-4">
-        <div class="col-12 text-center">
-          <p class="text-muted mb-0">&copy; 2024 Hoang Computer. All rights reserved.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
 
   <!-- Toast Notification -->
   <div class="toast-container">
@@ -838,22 +395,21 @@
     </div>
   </div>
 
+  <!-- Add this at the bottom of <body> -->
+  <div id="footerContainer"></div>
+  <script src="./js/cart.js"></script>
+  <script>
+    fetch('footer.html')
+      .then(res => res.text())
+      .then(html => document.getElementById('footerContainer').innerHTML = html);
+  </script>
+
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="./js/cart.js"></script>
 
   <script>
-    // Navbar scroll effect
-    $(window).scroll(function () {
-      if ($(this).scrollTop() > 50) {
-        $('.navbar').addClass('scrolled');
-        $('.navbar-logo').css('height', '30px');
-      } else {
-        $('.navbar').removeClass('scrolled');
-        $('.navbar-logo').css('height', '40px');
-      }
-    });
 
     // Animation on scroll
     function animateOnScroll() {
@@ -869,7 +425,10 @@
     }
 
     $(window).scroll(animateOnScroll);
-    $(document).ready(animateOnScroll);
+    $(document).ready(function () {
+      $(window).trigger('scroll');
+      updateCartBadge();
+    });
 
     // Form submission
     $('#contactForm').submit(function (e) {
@@ -939,9 +498,19 @@
       $('#cartBadge').text(cartItems.length);
     }
 
-    $(document).ready(function () {
-      updateCartBadge();
-    });
+    // function updateCartDisplay() {
+    //   const cartBadge = document.getElementById('cartBadge');
+    //   if (cartBadge) {
+    //     const cart = JSON.parse(localStorage.getItem('cart')) || [];
+    //     const totalItems = cart.reduce((sum, item) => sum + item.quantity, 0);
+    //     cartBadge.textContent = totalItems;
+    //   }
+    // }
+    // updateCartDisplay();
+
+    fetch('footer.html')
+      .then(res => res.text())
+      .then(html => document.getElementById('footerContainer').innerHTML = html);
   </script>
 </body>
 
