--- a/register.html
+++ b/register.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -49,7 +48,6 @@
       </div>
     </div>
   </nav>
-
   <!-- Register Form -->
   <div class="container register-container">
     <div class="row justify-content-center">
@@ -142,44 +140,16 @@
       </div>
     </div>
   </div>
-
-  <!-- Footer -->
-  <footer class="bg-dark text-white py-5">
-    <div class="container">
-      <div class="row justify-content-center text-center">
-        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h5 class="text-uppercase mb-4">About Us</h5>
-          <p class="text-white text-center">Hoang Computer is a store specializing in high-quality technology
-            products. We are committed to providing our customers with the best shopping experience.</p>
-        </div>
-        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h5 class="text-uppercase mb-4">Quick Links</h5>
-          <ul class="list-unstyled text-center">
-            <li class="mb-2"><a href="#home" class="text-white text-decoration-none">Home</a></li>
-            <li class="mb-2"><a href="#products" class="text-white text-decoration-none">Products</a></li>
-            <li class="mb-2"><a href="#contact" class="text-white text-decoration-none">Contact</a></li>
-            <li class="mb-2"><a href="#cart" class="text-white text-decoration-none">Cart</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-          <h5 class="text-uppercase mb-4">Contact Us</h5>
-          <p class="text-white mb-2"><i class="fas fa-map-marker-alt me-2"></i>06 Tran Thanh Trung, Thanh Khe,
-            DaNang</p>
-          <p class="text-white mb-2"><i class="fas fa-phone me-2"></i>+84 374145631</p>
-          <p class="text-white mb-2"><i class="fas fa-envelope me-2"></i>pvhoang1701@gmail.com</p>
-        </div>
-      </div>
-      <div class="row mt-4">
-        <div class="col-12 text-center">
-          <p class="text-white mb-0">&copy; 2024 Hoang Computer. All rights reserved.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
+  <div id="footerContainer"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="./js/register.js"></script>
-  <script src="./js/cart.js"></script>
+  <!-- <script src="./js/cart.js"></script> -->
+  <script>
+    fetch('footer.html')
+      .then(res => res.text())
+      .then(html => document.getElementById('footerContainer').innerHTML = html);
+  </script>
 </body>
 
 </html>
